adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi numquam distinctio dolor quibusdam possimus beatae consectetur rem sint quidem, nulla officia porro autem minima, placeat quasi aliquid? Reiciendis, minus eveniet!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat libero quia exercitationem praesentium soluta natus, repudiandae harum quaerat aliquid et earum facere unde veniam deserunt labore quod corrupti voluptatem! Suscipit!</p>
 </body>
 </html>
